# mpir

./: .gitignore  config.h.in  config.m4.in  configure.ac  gmp-impl.h  longlong.h  meson.build  meson_options.txt  mpir.h.in  notes-on-meson.txt  yasm_mac.inc.in
cxx/: meson.build
fft/: meson.build
mpf/: meson.build
mpn/: asm.py  meson.build
mpn/generic/: longlong_inc.h.in  meson.build
mpn/x86_64/: .asm_test.s  .test  .test.c  asm_test.py  config.m4.in  meson.build
mpn/x86_64/atom/: meson.build
mpn/x86_64/bobcat/: meson.build
mpn/x86_64/bulldozer/: meson.build
mpn/x86_64/bulldozer/piledriver/: meson.build
mpn/x86_64/core2/: meson.build
mpn/x86_64/core2/penryn/: meson.build
mpn/x86_64/haswell/: meson.build
mpn/x86_64/haswell/avx/: meson.build
mpn/x86_64/haswell/broadwell/: meson.build
mpn/x86_64/k8/: meson.build
mpn/x86_64/k8/k10/: meson.build
mpn/x86_64/k8/k10/k102/: meson.build
mpn/x86_64/k8/k8only/: meson.build
mpn/x86_64/nehalem/: meson.build
mpn/x86_64/nehalem/westmere/: meson.build
mpn/x86_64/netburst/: meson.build
mpn/x86_64/sandybridge/: meson.build
mpn/x86_64/sandybridge/ivybridge/: meson.build
mpn/x86_64/skylake/: meson.build
mpn/x86_64/skylake/avx/: meson.build
mpn/x86_64w/: meson.build
mpn/x86_64w/atom/: meson.build
mpn/x86_64w/bobcat/: meson.build
mpn/x86_64w/broadwell/avx/: and_n.asm  meson.build
mpn/x86_64w/bulldozer/: meson.build
mpn/x86_64w/bulldozer/piledriver/: meson.build
mpn/x86_64w/core2/: meson.build
mpn/x86_64w/core2/penryn/: meson.build
mpn/x86_64w/haswell/: meson.build
mpn/x86_64w/haswell/avx/: and_n.asm  meson.build
mpn/x86_64w/k8/: meson.build
mpn/x86_64w/k8/k10/: meson.build
mpn/x86_64w/k8/k10/k102/: meson.build
mpn/x86_64w/nehalem/: meson.build
mpn/x86_64w/nehalem/westmere/: meson.build
mpn/x86_64w/netburst/: meson.build
mpn/x86_64w/sandybridge/: meson.build
mpn/x86_64w/sandybridge/ivybridge/: meson.build
mpn/x86_64w/skylake/: meson.build
mpn/x86_64w/skylake/avx/: meson.build
mpq/: meson.build
mpz/: meson.build
printf/: meson.build
scanf/: meson.build
tests/: meson.build
tests/cxx/: meson.build
tests/fft/: meson.build
tests/misc/: meson.build
tests/mpf/: meson.build
tests/mpn/: meson.build
tests/mpq/: meson.build
tests/mpz/: meson.build
tests/rand/: meson.build
