option('with-yasm', type : 'string', 
    description : 'use a custom Yasm')

option('enable-assert', type : 'boolean', value : false, 
    description : 'enable ASSERT checking')

option('enable-alloca', type : 'combo', 
    choices : ['yes', 'no', 'reentrant', 'notreentrant', 'alloca', 'malloc-reentrant', 'malloc-notreentrant', 'debug'], 
    value : 'reentrant')

option('enable-fft', type : 'boolean', value : true, 
    description : 'enable FFTs for multiplication')

option('host-arch', type : 'combo', 
    choices : [
        'auto', 'generic',
        'x86_64', 'netburst', 'k8', 'k10', 'k102', 'bulldozer', 'piledriver', 'bobcat', 
        'core2', 'penryn', 'nehalem', 'westmere', 'sandybridge', 'ivybridge', 'haswell', 'haswellavx', 'skylake', 'skylakeavx', 'broadwell', 
        'atom', 'nano'
    ], 
    value : 'auto')
