option('with-yasm', type : 'string', 
    description : 'use a custom Yasm')

option('enable-assert', type : 'boolean', value : false, 
    description : 'enable ASSERT checking')

option('allocator', type : 'combo', 
    choices : ['alloca', 'malloc-reentrant', 'malloc-notreentrant', 'debug'], 
    value : 'malloc-reentrant', 
    description : 'allocator to use')

option('enable-fft', type : 'boolean', value : true, 
    description : 'enable FFTs for multiplication')

option('host-arch', type : 'combo', 
    choices : [
        'auto', 'generic',
        'x86_64', 'netburst', 'k8', 'k10', 'k102', 'bulldozer', 'piledriver', 'bobcat', 
        'core2', 'penryn', 'nehalem', 'westmere', 'sandybridge', 'ivybridge', 'haswell', 'haswellavx', 'skylake', 'skylakeavx', 'broadwell', 
        'atom', 'nano'
    ], 
    value : 'auto')
    
option('tests', type : 'boolean', value : false)