if get_option('enable-fft')
    fft_src = [
        'fft/adjust.c',
        'fft/adjust_sqrt2.c',
        'fft/butterfly_lshB.c',
        'fft/butterfly_rshB.c',
        'fft/combine_bits.c',
        'fft/div_2expmod_2expp1.c',
        'fft/fermat_to_mpz.c',
        'fft/fft_mfa_trunc_sqrt2.c',
        'fft/fft_mfa_trunc_sqrt2_inner.c',
        'fft/fft_negacyclic.c',
        'fft/fft_radix2.c',
        'fft/fft_trunc.c',
        'fft/fft_trunc_sqrt2.c',
        'fft/ifft_mfa_trunc_sqrt2.c',
        'fft/ifft_negacyclic.c',
        'fft/ifft_radix2.c',
        'fft/ifft_trunc.c',
        'fft/ifft_trunc_sqrt2.c',
        'fft/mul_2expmod_2expp1.c',
        'fft/mul_fft_main.c',
        'fft/mul_mfa_trunc_sqrt2.c',
        'fft/mul_trunc_sqrt2.c',
        'fft/mulmod_2expp1.c',
        'fft/normmod_2expp1.c',
        'fft/revbin.c',
        'fft/split_bits.c'
    ]
else
    fft_src = []
endif
