mpz_src = [
    'mpz/2fac_ui.c',
    'mpz/abs.c',
    'mpz/add.c',
    'mpz/add_ui.c',
    'mpz/and.c',
    'mpz/aorsmul.c',
    'mpz/aorsmul_i.c',
    'mpz/array_init.c',
    'mpz/bin_ui.c',
    'mpz/bin_uiui.c',
    'mpz/cdiv_q.c',
    'mpz/cdiv_q_ui.c',
    'mpz/cdiv_qr.c',
    'mpz/cdiv_qr_ui.c',
    'mpz/cdiv_r.c',
    'mpz/cdiv_r_ui.c',
    'mpz/cdiv_ui.c',
    'mpz/cfdiv_q_2exp.c',
    'mpz/cfdiv_r_2exp.c',
    'mpz/clear.c',
    'mpz/clears.c',
    'mpz/clrbit.c',
    'mpz/cmp.c',
    'mpz/cmp_d.c',
    'mpz/cmp_si.c',
    'mpz/cmp_ui.c',
    'mpz/cmpabs.c',
    'mpz/cmpabs_d.c',
    'mpz/cmpabs_ui.c',
    'mpz/com.c',
    'mpz/combit.c',
    'mpz/cong.c',
    'mpz/cong_2exp.c',
    'mpz/cong_ui.c',
    'mpz/dive_ui.c',
    'mpz/divegcd.c',
    'mpz/divexact.c',
    'mpz/divis.c',
    'mpz/divis_2exp.c',
    'mpz/divis_ui.c',
    'mpz/dump.c',
    'mpz/export.c',
    'mpz/fac_ui.c',
    'mpz/fdiv_q.c',
    'mpz/fdiv_q_ui.c',
    'mpz/fdiv_qr.c',
    'mpz/fdiv_qr_ui.c',
    'mpz/fdiv_r.c',
    'mpz/fdiv_r_ui.c',
    'mpz/fdiv_ui.c',
    'mpz/fib2_ui.c',
    'mpz/fib_ui.c',
    'mpz/fits_si.c',
    'mpz/fits_sint.c',
    'mpz/fits_slong.c',
    'mpz/fits_sshort.c',
    'mpz/fits_ui.c',
    'mpz/fits_uint.c',
    'mpz/fits_ulong.c',
    'mpz/fits_ushort.c',
    'mpz/gcd.c',
    'mpz/gcd_ui.c',
    'mpz/gcdext.c',
    'mpz/get_d.c',
    'mpz/get_d_2exp.c',
    'mpz/get_si.c',
    'mpz/get_str.c',
    'mpz/get_sx.c',
    'mpz/get_ui.c',
    'mpz/get_ux.c',
    'mpz/getlimbn.c',
    'mpz/hamdist.c',
    'mpz/import.c',
    'mpz/init.c',
    'mpz/init2.c',
    'mpz/inits.c',
    'mpz/inp_raw.c',
    'mpz/inp_str.c',
    'mpz/invert.c',
    'mpz/ior.c',
    'mpz/iset.c',
    'mpz/iset_d.c',
    'mpz/iset_si.c',
    'mpz/iset_str.c',
    'mpz/iset_sx.c',
    'mpz/iset_ui.c',
    'mpz/iset_ux.c',
    'mpz/jacobi.c',
    'mpz/kronsz.c',
    'mpz/kronuz.c',
    'mpz/kronzs.c',
    'mpz/kronzu.c',
    'mpz/lcm.c',
    'mpz/lcm_ui.c',
    'mpz/likely_prime_p.c',
    'mpz/limbs_finish.c',
    'mpz/limbs_modify.c',
    'mpz/limbs_read.c',
    'mpz/limbs_write.c',
    'mpz/lucnum2_ui.c',
    'mpz/lucnum_ui.c',
    'mpz/mfac_uiui.c',
    'mpz/miller_rabin.c',
    'mpz/millerrabin.c',
    'mpz/mod.c',
    'mpz/mul.c',
    'mpz/mul_2exp.c',
    'mpz/mul_si.c',
    'mpz/mul_ui.c',
    'mpz/n_pow_ui.c',
    'mpz/neg.c',
    'mpz/next_prime_candidate.c',
    'mpz/nextprime.c',
    'mpz/nthroot.c',
    'mpz/oddfac_1.c',
    'mpz/out_raw.c',
    'mpz/out_str.c',
    'mpz/perfpow.c',
    'mpz/perfsqr.c',
    'mpz/popcount.c',
    'mpz/pow_ui.c',
    'mpz/powm.c',
    'mpz/powm_ui.c',
    'mpz/pprime_p.c',
    'mpz/primorial_ui.c',
    'mpz/probable_prime_p.c',
    'mpz/prodlimbs.c',
    'mpz/realloc.c',
    'mpz/realloc2.c',
    'mpz/remove.c',
    'mpz/roinit_n.c',
    'mpz/root.c',
    'mpz/rootrem.c',
    'mpz/rrandomb.c',
    'mpz/scan0.c',
    'mpz/scan1.c',
    'mpz/set.c',
    'mpz/set_d.c',
    'mpz/set_f.c',
    'mpz/set_q.c',
    'mpz/set_si.c',
    'mpz/set_str.c',
    'mpz/set_sx.c',
    'mpz/set_ui.c',
    'mpz/set_ux.c',
    'mpz/setbit.c',
    'mpz/size.c',
    'mpz/sizeinbase.c',
    'mpz/sqrt.c',
    'mpz/sqrtrem.c',
    'mpz/sub.c',
    'mpz/sub_ui.c',
    'mpz/swap.c',
    'mpz/tdiv_q.c',
    'mpz/tdiv_q_2exp.c',
    'mpz/tdiv_q_ui.c',
    'mpz/tdiv_qr.c',
    'mpz/tdiv_qr_ui.c',
    'mpz/tdiv_r.c',
    'mpz/tdiv_r_2exp.c',
    'mpz/tdiv_r_ui.c',
    'mpz/tdiv_ui.c',
    'mpz/trial_division.c',
    'mpz/tstbit.c',
    'mpz/ui_pow_ui.c',
    'mpz/ui_sub.c',
    'mpz/urandomb.c',
    'mpz/urandomm.c',
    'mpz/xor.c'
]